--- a/src/MasterMind/GameBoard.css
+++ b/src/MasterMind/GameBoard.css
@@ -1,3 +1,17 @@
 .GameBoard {
   width: 100%;
 }
+
+.GameBoard__row td,
+.GameBoard__row th {
+  height: 55px;
+}
+
+.GameBoard__hiddenPattern::before {
+  content: ' ';
+  background-color: #ccc;
+  border-radius: 2px;
+  display: block;
+  width: 100%;
+  height: 38px;
+}
