--- a/src/MasterMind/GameBoard.css
+++ b/src/MasterMind/GameBoard.css
@@ -15,3 +15,11 @@
   width: 100%;
   height: 38px;
 }
+
+.GameBoard__buttons-center-aligned {
+  text-align: center;
+}
+
+.GameBoard__buttons-right-aligned {
+  text-align: right;
+}
