--- a/src/MasterMind/TurnKeyPegs.css
+++ b/src/MasterMind/TurnKeyPegs.css
@@ -5,7 +5,7 @@
 .TurnKeyPegItem {
   box-sizing: border-box;
   border: 1px solid #ccc;
-  border-radius: 2px;;
+  border-radius: 2px;
   display: inline-block;
   margin: 2px;
   width: 20px;
